--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Page</title>
+    <title>Contact Form</title>
 </head>
 <body>
-    This is about Page
-    <h1>This is New Feature</h1>
+    Contact Page
 </body>
 </html>
